- added linuxgazette.net aggregator domains
08/08/2004 0.0.14 fix release
- fixed gmail login procedure
- fixed some stuff in cookie.lua
- added yahoo.lua (thanks russell)
- fixed bug in libero.lua (local b = internal_state.b missing before
b:verbose_mode(), submitted by Negrore)
- lycos parsing message workaround (should be fixed)
- bug in lycos TOP fixed
- libero.lua adopted to use common.lua top and retr_cb
- tin.lua adopted to use common.lua top and retr_cb
- common.lua now includes a common TOP implementarion and the classical
retr_cb and top_cb factories.
- finished FreeBSD porting
26/07/2004 0.0.13 fix release
- fixed manual (thanks er_capoccia)
- fixed rpm /etc/init.d script (thanks domfe)
- the win32 install no more overwrites the start menu entry (preserves the user options)
- added to browser the NTLM and other auth type if SSL is found
- added folder support to libero.lua
- fixed libero.lua TOP function
- added scripts/cvs2changelog.lua to generate changelog for the contibuted
plugins
- added folder parameter to tin.lua plugin
- fixed aggregator plugin to respect RSS 2.0 specifications
- added args parser
- added freepops-doc debian package
- fixed last cygwin issue
- fixed gmail TOP
- fixed cygwin build target (partially)
- porting freepops to OpenBSD
- added cvs_acl to allow contributors commit
- fixed bug in browser.lua (u could be nil but indexed)
- added b:ssl_init_stuff() and b:verbose_mode()
- complete fix to browser.lua that now supports rotten cookies (thanks Eddi)
09/07/2004 0.0.12 fix release
- added link tag support to aggregator plugin
- added spam/AV tutorial to the manual
- added some gmail fixes
- added LAN tutorial to the manual
- added some extra checks to browser's mangle location
08/07/2004 0.0.11 feature/fix release (never released officially)
- added base tutorials to manual
- added pubDate tag support to aggregator plugin
- added gmail.lua to manual + various fixes
- added man page to manual
- added FAQ to manual
- fixed man page