@@ -1,3 +1,5 @@
+- added standard folders support for yahoo.it
+- added yahoo.it support to yahoo.lua
 - added linuxgazette.net aggregator domains
 08/08/2004 0.0.14 fix release
 - fixed gmail login procedure
